--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:22.04
+FROM --platform=linux/amd64 ubuntu:22.04 as builder
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential automake pkg-config libtool sqlite3 libconfig-dev libsqlite3-dev autoconf xsltproc libbsd-dev
@@ -12,3 +12,12 @@ RUN make -j8
 RUN make install
 RUN make postinstall
 RUN /repo/src/cvechecker -i
+
+RUN mkdir -p /deps
+RUN ldd /repo/src/cvechecker | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+
+FROM ubuntu:22.04 as package
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/src/cvechecker /repo/src/cvechecker
+ENV LD_LIBRARY_PATH=/deps
