--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -21,4 +21,5 @@ FROM ubuntu:22.04 as package
 COPY --from=builder /deps /deps
 COPY --from=builder /repo/src/cvechecker /repo/src/cvechecker
 COPY --from=builder /usr/local/etc /usr/local/etc
+COPY --from=builder /usr/local/var /usr/local/var
 ENV LD_LIBRARY_PATH=/deps
